feat: 优化文件服务和系统基础设施
- FileServiceImpl 完善文件服务逻辑
- VerificationCodeServiceImpl 优化验证码服务
- FileSubmissionVO 增强文件提交信息展示
- FileController 改进文件下载编码处理
- SecurityConfig 调整安全配置
- WebMvcConfig 优化Web MVC配置
- AccessLogInterceptor 增强访问日志拦截器
- 新增 MybatisPlusConfig 配置类